<resources>
    <string name="app_name">爱芝士</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="deeplink">Deep Link</string>

    <!-- Screen strings -->
    <string name="step_one">Step One</string>
    <string name="step_two">Step Two</string>
    <string name="deep_link_instructions">Type your deep link args</string>
    <string name="settings_fragment_text">Settings Fragment</string>
    <string name="shopping_fragment_text">Shopping Fragment</string>
    <string name="navigate_destination_button">Navigate to destination</string>
    <string name="navigate_action_button">Navigate with action</string>
    <string name="next_step_button">Navigate next step</string>
    <string name="finish_button">Finish Flow</string>
    <string name="send_deep_link_notification_button">Send deep link notification</string>


    <string name="prompt_empty">暂时还没有收藏记录～</string>
    <string name="prompt_error">这边有错误发生了!</string>
    <string name="prompt_loading">加载中…</string>

    <string name="me_check_data">数据存储</string>
    <string name="storage_data_type">存储方式：</string>
    <string name="storage_data_file_count">写入文件数：</string>
    <string name="storage_data_object_type">数据类型：</string>
    <string name="storage_data_object_size">数据数量：</string>
    <string name="storage_data_write">写入数据</string>
    <string name="storage_data_clear">一键检查</string>
    <string name="storage_data_migrate">一键迁移</string>
        <string name="order_id_mock" translatable="false"># 1234–5678</string>
        <string name="price_mock" translatable="false">$25</string>
        <string name="requests_count_mock" translatable="false">5</string>
        <string name="requests_count_badge" translatable="false">REQUESTS</string>
        <string name="weight_mock" translatable="false">50 oz</string>
        <string name="weight_badge" translatable="false">WEIGHT</string>
        <string name="pledge_mock" translatable="false">$150</string>
        <string name="pledge_badge" translatable="false">PLEDGE</string>
        <string name="sender_badge" translatable="false">SENDER</string>
        <string name="client_name_mock" translatable="false">Edward Norton</string>
        <string name="rating_mock" translatable="false">(26)</string>
        <string name="from_badge" translatable="false">FROM</string>
        <string name="to_badge" translatable="false">TO</string>
        <string name="delivery_date_badge" translatable="false">DELIVERY DATE</string>
        <string name="delivery_time_mock" translatable="false">6:30 pm</string>
        <string name="delivery_date_mock" translatable="false">May 16, 2016</string>
        <string name="deadline_badge" translatable="false">REQUEST DEADLINE</string>
        <string name="deadline_time_mock" translatable="false">24 minutes</string>
        <string name="request_btn_text" translatable="false">REQUEST</string>
        <string name="btn_annotation_mock" translatable="false">5 people have sent a request</string>
        <string name="content_from1_mock">W 90th St</string>
        <string name="content_from2_mock">New York, NY 10025</string>
        <string name="content_to1_mock">46th Ave</string>
        <string name="content_to2_mock">Woodside, NY 11101</string>
        <string name="title_activity_main2">Main2Activity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search">搜索</string>
    <!-- Messages -->
    <string name="set_permissions_in_settings">Go to Settings -> Apps and Notifications ->
        WorkManager Demo -> App Permissions and grant access to Storage.</string>
    <string name="app_description">爱芝士在线课程学习app</string>

    <string name="ip_all_images">所有图片</string>
    <string name="ip_folder_image_count">共%1$d张</string>
    <string name="ip_preview_image_count">%1$d/%2$d</string>
    <string name="ip_select_limit">最多选择%1$d张图片</string>
    <string name="ip_complete">完成</string>
    <string name="ip_select_complete">完成(%1$d/%2$d)</string>
    <string name="ip_preview">预览</string>
    <string name="ip_preview_count">预览(%1$d)</string>
    <string name="ip_photo_crop">图片裁剪</string>
    <string name="ip_origin">原图</string>
    <string name="ip_origin_size">原图(%1$s)</string>
</resources>
